ANTLR+MODBUS/GCodeParser.py
# Generated from GCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GCodeParser ( Parser ):

    grammarFileName = "GCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'N'", "'M30'", "'M02'", "'M01'", "'G01'", 
                     "'G00'", "'X'", "'Y'","'-'", "'\\r'", "'\\n'", "'\\r\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INT", "ID", "WS", "STRING" ]

    RULE_gcode = 0
    RULE_fimprograma = 1
    RULE_statement = 2
    RULE_numerolinha = 3
    RULE_mfim = 4
    RULE_mfunc = 5
    RULE_codfunc = 6
    RULE_coordx = 7
    RULE_coordy = 8
    RULE_coord = 9
    RULE_fimdelinha = 10

    ruleNames =  [ "gcode", "fimprograma", "statement", "numerolinha", "mfim", 
                   "mfunc", "codfunc", "coordx", "coordy", "coord", "fimdelinha" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    INT=12
    ID=13
    WS=14
    STRING=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GcodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fimprograma(self):
            return self.getTypedRuleContext(GCodeParser.FimprogramaContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(GCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return GCodeParser.RULE_gcode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGcode" ):
                listener.enterGcode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGcode" ):
                listener.exitGcode(self)




    def gcode(self):

        localctx = GCodeParser.GcodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gcode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 22
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 25 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 27
            self.fimprograma()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FimprogramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numerolinha(self):
            return self.getTypedRuleContext(GCodeParser.NumerolinhaContext,0)


        def mfim(self):
            return self.getTypedRuleContext(GCodeParser.MfimContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_fimprograma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFimprograma" ):
                listener.enterFimprograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFimprograma" ):
                listener.exitFimprograma(self)




    def fimprograma(self):

        localctx = GCodeParser.FimprogramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fimprograma)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.numerolinha()
            self.state = 30
            self.mfim()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numerolinha(self):
            return self.getTypedRuleContext(GCodeParser.NumerolinhaContext,0)


        def codfunc(self):
            return self.getTypedRuleContext(GCodeParser.CodfuncContext,0)


        def fimdelinha(self):
            return self.getTypedRuleContext(GCodeParser.FimdelinhaContext,0)


        def coordx(self):
            return self.getTypedRuleContext(GCodeParser.CoordxContext,0)


        def coordy(self):
            return self.getTypedRuleContext(GCodeParser.CoordyContext,0)


        def mfunc(self):
            return self.getTypedRuleContext(GCodeParser.MfuncContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.numerolinha()
                self.state = 33
                self.codfunc()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 34
                    self.coordx()


                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 37
                    self.coordy()


                self.state = 40
                self.fimdelinha()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.numerolinha()
                self.state = 43
                self.mfunc()
                self.state = 44
                self.fimdelinha()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.fimdelinha()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumerolinhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(GCodeParser.INT)
            else:
                return self.getToken(GCodeParser.INT, i)

        def getRuleIndex(self):
            return GCodeParser.RULE_numerolinha

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumerolinha" ):
                listener.enterNumerolinha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumerolinha" ):
                listener.exitNumerolinha(self)




    def numerolinha(self):

        localctx = GCodeParser.NumerolinhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_numerolinha)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(GCodeParser.T__0)
            self.state = 50
            self.match(GCodeParser.INT)
            self.state = 51
            self.match(GCodeParser.INT)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 52
                self.match(GCodeParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MfimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GCodeParser.RULE_mfim

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMfim" ):
                listener.enterMfim(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMfim" ):
                listener.exitMfim(self)




    def mfim(self):

        localctx = GCodeParser.MfimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mfim)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(GCodeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(GCodeParser.STRING, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_mfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMfunc" ):
                listener.enterMfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMfunc" ):
                listener.exitMfunc(self)




    def mfunc(self):

        localctx = GCodeParser.MfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mfunc)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.match(GCodeParser.T__2)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(GCodeParser.T__3)
                self.state = 59
                self.match(GCodeParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GCodeParser.RULE_codfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodfunc" ):
                listener.enterCodfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodfunc" ):
                listener.exitCodfunc(self)




    def codfunc(self):

        localctx = GCodeParser.CodfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_codfunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(GCodeParser.CoordContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_coordx

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordx" ):
                listener.enterCoordx(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordx" ):
                listener.exitCoordx(self)




    def coordx(self):

        localctx = GCodeParser.CoordxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_coordx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(GCodeParser.T__6)
            self.state = 65
            self.coord()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(GCodeParser.CoordContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_coordy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordy" ):
                listener.enterCoordy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordy" ):
                listener.exitCoordy(self)




    def coordy(self):

        localctx = GCodeParser.CoordyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_coordy)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(GCodeParser.T__7)
            self.state = 68
            self.coord()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(GCodeParser.INT)
            else:
                return self.getToken(GCodeParser.INT, i)

        def getRuleIndex(self):
            return GCodeParser.RULE_coord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoord" ):
                listener.enterCoord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoord" ):
                listener.exitCoord(self)




    def coord(self):

        localctx = GCodeParser.CoordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_coord)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(GCodeParser.INT)
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(GCodeParser.INT)


            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 74
                self.match(GCodeParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FimdelinhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GCodeParser.RULE_fimdelinha

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFimdelinha" ):
                listener.enterFimdelinha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFimdelinha" ):
                listener.exitFimdelinha(self)




    def fimdelinha(self):

        localctx = GCodeParser.FimdelinhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fimdelinha)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3584) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





